--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </div>
            <div class="collection-item">
       <div class="info">
-        <h1>Piccollo</h1>
-        <p>Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+        <h1>Planalto</h1>
+        <p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
       </div>
        <img src="./kopi3.png" alt="Gran Espresso Coffee" class="coffee-bag" />
   </section>
