--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1>OUR COLLECTION</h1>
 
     <div class="collection-item">
-      <img src="./kopi1 copy.png" alt="Danche Coffee" class="coffee-bag" />
+      <img class="rasm1" src="./kopi1 copy.png" alt="Danche Coffee" class="coffee-bag" />
       <div class="info">
         <h1>DANCHE</h1>
         <p>Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
@@ -66,10 +66,10 @@
         <h1>GRAN ESPRESSO</h1>
         <p>Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
       </div>
-      <img src="./kopi2.png" alt="Gran Espresso Coffee" class="coffee-bag" />
+      <img class="rasm1" src="./kopi2.png" alt="Gran Espresso Coffee" class="coffee-bag" />
     </div>
         <div class="collection-item">
-          <img src="./kopi3.png" alt="Gran Espresso Coffee" class="coffee-bag" />
+          <img class="rasm1" src="./kopi3.png" alt="Gran Espresso Coffee" class="coffee-bag" />
       <div class="info">
         <h1>Piccollo</h1>
         <p>Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
@@ -80,7 +80,7 @@
         <h1>Planalto</h1>
         <p>Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
       </div>
-       <img src="./kopi3.png" alt="Gran Espresso Coffee" class="coffee-bag" />
+       <img class="rasm1" src="./kopi3.png" alt="Gran Espresso Coffee" class="coffee-bag" />
   </section>
   
   <footer class="footer">
@@ -90,7 +90,7 @@
        <div class="btn12">
         <a href="./index.html">
           <img src="./Group 3614.png" alt="">
-        </a>
+        </a>                                                                                         
        </div>
 
       <!-- Navigation -->
